--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "homepage": "https://github.com/rogersmuk/pousadavocequesabe",
   "devDependencies": {
     "eric-mayer-reset-less-sass": "https://github.com/dnstld/eric-mayer-reset-less-sass.git",
-    "vegas": "^2.4.0"
+    "vegas": "^2.4.0",
+    "jquery-colorbox": "https://github.com/jackmoore/colorbox.git#^1.6.4"
   }
 }
